--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,19 @@
 image:
   - Visual Studio 2017
 clone_folder: c:\projects\source
+
+install:
+- cmmd: >-
+    echo "Downloading conan..."
+
+    set PATH=%PATH%;%PYTHON%/Scripts/
+
+    pip.exe install conan
+
+    conan user # Create the conan data directory
+
+    conan --version
+
 build_script:
 - cmd: >-
     mkdir build
