--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ image:
 clone_folder: c:\projects\source
 
 install:
-- cmmd: >-
+- cmd: >-
     echo "Downloading conan..."
 
     set PATH=%PATH%;%PYTHON%/Scripts/
