--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,8 @@ install:
     echo "Downloading conan..."
 
     set PATH=%PATH%;%PYTHON%/Scripts/
+    
+    python -m pip install --upgrade pip
 
     pip.exe install conan
 
@@ -27,3 +29,4 @@ build_script:
 test_script:
 - cmd: ctest -C Debug
 
+python -m pip install --upgrade pip
