--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,8 +12,9 @@ install:
 
     pip.exe install conan
 
-    conan user # Create the conan data directory
-
+    # Create the conan data directory
+    conan user
+    
     conan --version
 
 build_script:
