--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ jobs:
         - gcc
       install: 
         - pip install conan
+        - apt install cmake
       script:
         - conan remote add bincrafters https://api.bintray.com/conan/bincrafters/public-conan 
         - conan remote list
@@ -19,9 +20,11 @@ jobs:
       os: osx
       language: shell
       install:
-        - brew search python
-        - brew install python
-        - pip install conan
+        - brew install python # install python3
+        - pip install conan # install conan
+        - brew install cmake
+        - cmake --version
+        - conan --version
       script:
         - conan remote add bincrafters https://api.bintray.com/conan/bincrafters/public-conan 
         - conan remote list
