--- a/.travis.yml
+++ b/.travis.yml
@@ -20,9 +20,12 @@ jobs:
       os: osx
       language: shell
       install:
-        - brew install python # install python3
-        - pip install conan # install conan
-        - brew install cmake
+        - | # installing as bundle to prevent failure for existing packages
+          - brew bundle --file=- <<-EOS
+          -   brew "python"
+          -   brew "cmake"
+          - EOS
+        - pip install conan # install conan, python already needed
         - cmake --version
         - conan --version
       script:
