--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,10 @@ jobs:
       language: shell
       install:
         - | # installing as bundle to prevent failure for existing packages
-          - brew bundle --file=/dev/stdin <<EOS
-          -   brew "python"
-          -   brew "cmake"
-          - EOS
+          brew bundle --file=/dev/stdin <<EOS
+          brew "python"
+          brew "cmake"
+          EOS
         - pip install conan # install conan, python already needed
         - cmake --version
         - conan --version
