--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,6 @@ jobs:
         - | # there are other options installing cmake
         curl -sSL https://github.com/Kitware/CMake/releases/download/v3.14.7/cmake-3.14.7-Linux-x86_64.tar.gz | 
           sudo tar -xzC /opt
-        - sudo apt install cmake
       script:
         - conan remote add bincrafters https://api.bintray.com/conan/bincrafters/public-conan 
         - conan remote list
@@ -25,10 +24,10 @@ jobs:
       install:
         - brew update --quiet
         - | # installing as bundle to prevent failure for existing packages
-          brew bundle --file=/dev/stdin <<EOS
+          brew bundle --file=/dev/stdin <<-EOS
           brew "python"
           brew "cmake"
-        EOS
+EOS
         - pip install conan # install conan, python already needed
         - cmake --version
         - conan --version
