--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,11 @@ jobs:
       install:
         - brew update --quiet
         - | # installing as bundle to prevent failure for existing packages
+          tail - <<-EOS
+          brew "python"
+          brew "cmake"
+          EOS
+        - | # installing as bundle to prevent failure for existing packages
           brew bundle --file=/dev/stdin <<-EOS
           brew "python"
           brew "cmake"
