--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ image:
 clone_folder: c:\projects\source
 
 install:
-  - cmd: >-
+  - cmd: |
       echo "Downloading conan..." ;
       set PATH=%PATH%;%PYTHON%/Scripts/ ;
       python -m pip install -q --upgrade pip ;
