--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,7 +6,19 @@ install:
   - cmd: >-
       echo "Downloading conan..."
             
-      pip.exe install -q conan
+      python --version
+            
+      choco install python3
+      
+      python --version
+      
+      pip --version
+      
+      python -m pip install -U pip
+      
+      pip --version
+      
+      pip install -q conan
       
       conan user
       
