--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,7 @@ install:
             
       python --version
             
-      choco install python3
+      choco install python --version=3.7.2
       
       python --version
       
