Python3 is already installed, don't do it as it fails

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,11 +9,7 @@ install:
             
       python --version
       
-      choco list --local-only python
-
-      choco install python3 --install-arguments="'/l*v c:\python3_msi_install.log'" || cat c:\python3_msi_install.log
-      
-      python --version
+      :: choco install python3
       
       pip --version
       
