--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 environment:
   global:
-    - ENV_SETUP_BAT: C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\Tools\VsDevCmd.bat
-    - ENV_SETUP_ARG: amd64
+    ENV_SETUP_BAT: C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\Tools\VsDevCmd.bat
+    ENV_SETUP_ARG: amd64
   
   matrix:    
   - TOOLCHAIN: "Visual Studio 2019 x64"
