--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,7 +21,7 @@ clone_folder: c:\projects\source
 install:
   - echo "Downloading conan..."
   - REM choco install python3
-  - python -m pip install -U pip
+  - python3amd64 -m pip install -U pip
   - pip install -q conan
   - conan user
   - if defined CLANG_URL appveyor DownloadFile %CLANG_URL% -FileName llvm-installer.exe
