--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,7 +21,8 @@ clone_folder: c:\projects\source
 install:
   - echo "Downloading conan..."
   - REM choco install python3
-  - python3 -m pip install -U pip
+  - set PATH=C:\Python37-x64\bin;%PATH%
+  - python -m pip install -U pip
   - pip install -q conan
   - conan user
   - if defined CLANG_URL appveyor DownloadFile %CLANG_URL% -FileName llvm-installer.exe
