--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,16 +2,16 @@ environment:
   global:
     ENV_SETUP_BAT: C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\Tools\VsDevCmd.bat
     ENV_SETUP_ARG: -host_arch=amd64
+    PATH: C:\Python37-x64\bin:%PATH%
   
   matrix:    
-  - TOOLCHAIN: "Visual Studio 2019 x64"
-    APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-    GENERATOR: Visual Studio 16 2019
+#  - TOOLCHAIN: "Visual Studio 2019 x64"
+#    APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+#    GENERATOR: Visual Studio 16 2019
     
   - TOOLCHAIN: "Visual Studio 2019 Clang/LLVM 9.0.0"
     APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-    GENERATOR: Ninja
-    PACMAN_PACKAGES: "mingw-w64-x86_64-ninja"
+    GENERATOR: Visual Studio 16 2019
     PATH: C:\Program Files\LLVM\bin;%PATH%
     CMAKE_ARGS: -DCMAKE_C_COMPILER=clang-cl.exe -DCMAKE_CXX_COMPILER=clang-cpp.exe
     CLANG_URL: https://releases.llvm.org/9.0.0/LLVM-9.0.0-win64.exe
@@ -21,9 +21,8 @@ clone_folder: c:\projects\source
 install:
   - echo "Downloading conan..."
   - REM choco install python3
-  - set PATH=C:\Python37-x64\bin;%PATH%
   - python -m pip install -U pip
-  - pip install -q conan
+  - pip3 install -q conan
   - conan user
   - if defined CLANG_URL appveyor DownloadFile %CLANG_URL% -FileName llvm-installer.exe
   - if defined CLANG_URL START /WAIT llvm-installer.exe /S /D=C:\"Program Files\LLVM"
